# CellMap

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
cellmap/: __init__.py  cellmap.py
cellmap/.ipynb_checkpoints/: CellMap_test_pancreas-checkpoint.ipynb
cellmap/history/: cellmap_250707.py
figures/: CellMap_Overview.ai  Figure_endocrine.ipynb
python/cellmap/: CellMap.csv  cellmap.py
python/cellmap/.ipynb_checkpoints/: CellMap_test_pancreas-checkpoint.ipynb
tutorial/: CellMap_tutorial_bonemarrow.csv  CellMap_tutorial_bonemarrow.ipynb  CellMap_tutorial_endocrine.csv  CellMap_tutorial_endocrine.ipynb  CellMap_tutorial_hippocampus.csv  CellMap_tutorial_hippocampus.ipynb  CellMap_tutorial_pancreas  CellMap_tutorial_pancreas.csv  CellMap_tutorial_pancreas.ipynb
tutorial/.ipynb_checkpoints/: CellMap_tutorial_bonemarrow-checkpoint.ipynb  CellMap_tutorial_pancreas-checkpoint.ipynb
tutorial/output/: CellMapViewer_pancreas.csv
tutorial/res/temp/: logging.txt
