[tool.poetry]
name = "CellMap"
version = "1.0.0"
description = "CellMap - RNA landscape inference method"
authors = ["Yusuke Imoto"]
readme = "README.md"
repository = "https://github.com/yusuke-imoto-lab/CellMap"
documentation = "https://github.com/yusuke-imoto-lab/CellMap/"

[tool.poetry.dependencies]
python       = ">=3.8,<3.11"
scikit-learn = ">=0.24"
scipy = "^1.8.1"
matplotlib = ">=3.4.3"
anndata = "^0.8.0"
numpy = ">=1.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "src/cellmap" }
]